--- a/webplatform_test/WebContent/sencha/index.html
+++ b/webplatform_test/WebContent/sencha/index.html
@@ -10,6 +10,18 @@
 
 
 <script type="text/javascript">
+	var alertFallback = true;
+	if (typeof console === "undefined" || typeof console.log === "undefined") {
+	  console = {};
+	  if (alertFallback) {
+	      console.log = function(msg) {
+	           alert(msg);
+	      };
+	  } else {
+	      console.log = function() {};
+	  }
+	}
+
     Ext.Loader.setPath('Ext.app', 'app');
 </script>
 
